projet_gl/src/test/deca/syntax/valid/listClass/extends.deca
// Description:
//    test parser for DeclClass (extends).
//
// Resultats:
//    `> [18, 0] Program
//      +> ListDeclClass [List with 2 elements]
//      |  []> [18, 6] DeclClass
//      |  ||  +> [18, 6] Identifier (test)
//      |  ||  +> Identifier (Object)
//      |  []> [19, 6] DeclClass
//      |      +> [19, 6] Identifier (test1)
//      |      +> [19, 20] Identifier (test)
//      `> EmptyMain
//
// Historique:
//    cree le 13/01/2024

class test{}
class test1 extends test{}