projet_gl/src/test/deca/syntax/invalid/class/incorrectClass.deca
// Description:
//    invalid test parser for class.
//
// Resultats:
//    ligne 12 : missing '}' at 'class'
//
// Historique:
//    cree le 13/01/2024

class test{}
class test1{
    class test3{}
}